k8s-manifests/payment-service-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: payment-deployment
  namespace: food-app
spec:
  replicas: 2
  selector:
    matchLabels:
      app: payment-deployment
  template:
    metadata:
      labels:
        app: payment-deployment
    spec:
      containers:
        - name: payment-deployment
          image: ghcr.io/felixopk/payment-service:main-3af3094st
          imagePullPolicy: Always
          ports:
            - containerPort: 3000
      imagePullSecrets:
        - name: ghcr-secret
