k8s-manifests/menu-service-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: menu-deployment
  namespace: food-app
spec:
  replicas: 2
  selector:
    matchLabels:
      app: menu-deployment
  template:
    metadata:
      labels:
        app: menu-deployment
    spec:
      imagePullSecrets:
      - name: ghcr-secret
      containers:
      - name: menu-deployment
        image: ghcr.io/felixopk/menu-service:main-490b0fest
        imagePullPolicy: Always
        ports:
          - containerPort: 3000
---
apiVersion: v1
kind: Service
metadata:
  name: menu-service
  namespace: food-app
spec:
  type: ClusterIP
  ports:
    - port: 3000
      targetPort: 3000
  selector:
    app: menu-deployment
