k8s-manifests/order-service-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: order-deployment
  namespace: food-app
spec:
  replicas: 2
  selector:
    matchLabels:
      app: order-deployment
  template:
    metadata:
      labels:
        app: order-deployment
    spec:
      imagePullSecrets:
        - name: ghcr-secret
      containers:
      - name: order-deployment
        image: ghcr.io/felixopk/order-service:main-546c697st
        imagePullPolicy: Always
        ports:
          - containerPort: 3000
---
apiVersion: v1
kind: Service
metadata:
  name: order-service
  namespace: food-app
spec:
  type: ClusterIP
  ports:
    - port: 3000
      targetPort: 3000
  selector:
    app: order-deployment
